--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ subprojects {
       maven { url deps.build.repositories.plugins }
       maven { url deps.build.repositories.kotlineap }
       maven { url deps.build.repositories.snapshots }
+      maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
+
     }
 
     dependencies {
