--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -33,6 +33,8 @@ def versions = [
     glide: '4.6.1',
     inspector: '0.3.0',
     kotlin: '1.2.30-eap-47',
+    poet: '0.7.0',
+    kotlinq: '0.4.1-SNAPSHOT',
     leakcanary: '1.5.4',
     okhttp: '3.9.1',
     playServices: '11.2.0',
@@ -244,13 +246,15 @@ ext.deps = [
         gradlePlugin: "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
         metadata: 'me.eugeniomarletti:kotlin-metadata:1.2.1',
         noArgGradlePlugin: "org.jetbrains.kotlin:kotlin-noarg:${versions.kotlin}",
-        poet: 'com.squareup:kotlinpoet:0.7.0-20180211.200114-25',
+        poet: "com.squareup:kotlinpoet:${versions.poet}",
         stdlib: [
             core: "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
             jdk7: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}",
             jdk8: "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
         ]
     ],
+
+    kotlinq: [ dsl: "com.prestongarno.kotlinq:kotlinq-dsl:${versions.kotlinq}" ],
 
     leakCanary: [
         debug: "com.squareup.leakcanary:leakcanary-android:${versions.leakcanary}",
